# bg-ekatte-lib

./: Makefile  README.md  pyproject.toml
bg_ekatte_lib/: init_pipeline.py  utils.py
data/processed/v20230131/: ekatte.pq  ekatte_geo.feather
data/source_data/v_202212_202301/Ekatte_json/: ek_atte.json  ek_doc.json  ek_kmet.json  ek_obl.json  ek_obst.json  ek_raion.json  ek_reg1.json  ek_reg2.json  ek_sobr.json  sof_rai.json
