[tool.poetry]
name = "bg-ekatte-lib"
version = "0.1.0"
description = ""
authors = ["Todor Lubenov <tlubenov@gmail.com>"]
readme = "README.md"
packages = [{include = "bg_ekatte_lib"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
geopandas = "^0.12.2"
pyproj = "^3.4.1"
shapely = "^2.0.1"
fiona = "^1.9.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
